# customer-churn-ml-pipeline

./: LICENSE  README.md  dockerfile  dvc.yaml  main.py  params.yaml  pyproject.toml  requirements.txt
mlruns/0/: meta.yaml
mlruns/129153944882930401/: meta.yaml
mlruns/129153944882930401/2c1cd46541224d01a49de9b7d1184ba0/: meta.yaml
mlruns/129153944882930401/2c1cd46541224d01a49de9b7d1184ba0/metrics/: accuracy  f1_score  precision  recall
mlruns/129153944882930401/2c1cd46541224d01a49de9b7d1184ba0/tags/: mlflow.runName
mlruns/129153944882930401/e7ad4f33dec7476fbaf7b179cef34016/: meta.yaml
mlruns/129153944882930401/e7ad4f33dec7476fbaf7b179cef34016/metrics/: accuracy
mlruns/129153944882930401/e7ad4f33dec7476fbaf7b179cef34016/tags/: mlflow.runName  mlflow.source.name
mlruns/129153944882930401/models/m-648618f2db984159acd5a3a347f762cc/: meta.yaml
mlruns/129153944882930401/models/m-74bf85cd927c4c969af10ca293bc3446/: meta.yaml
mlruns/480087206132537770/: meta.yaml
mlruns/480087206132537770/2429f31fece64cafb481b26992e19ab5/: meta.yaml
mlruns/480087206132537770/2429f31fece64cafb481b26992e19ab5/artifacts/: .gitignore
mlruns/480087206132537770/2429f31fece64cafb481b26992e19ab5/metrics/: AUC  accuracy  f1_score  loss  precision  recall  training_accuracy  validation_accuracy
mlruns/480087206132537770/2429f31fece64cafb481b26992e19ab5/tags/: mlflow.runName
mlruns/480087206132537770/models/m-eeebb1cf7fdb4125a83c66a5bc811acb/: meta.yaml
src/: evaluate.py  features.py  ingestion.py  preprocessing.py  train.py
src/utils/: logger.py
(+19 files in other folders)
