[project]
name = "customer-churn"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dvc>=3.63.0",
    "joblib>=1.5.2",
    "mlflow>=3.6.0",
    "numpy>=2.3.4",
    "pandas>=2.3.3",
    "pyyaml>=6.0.3",
    "rich>=14.2.0",
    "scikit-learn>=1.7.2",
    "streamlit>=1.51.0",
    "xgboost>=3.1.1",
]
